devops/_kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-srv
  namespace: ${NAMESPACE}

spec:
  selector:
    app: ${APP_NAME}-pod
  ports:
    - protocol: TCP
      port: ${PORT}
      targetPort: ${PORT}
